# C_StateMachine

./: CMakeLists.txt  CentrifugeTest.c  CentrifugeTest.h  Fault.c  Fault.cpp  Fault.h  LockGuard.cpp  LockGuard.h  Motor.c  Motor.h  README.md  StateMachine.c  StateMachine.h  fb_allocator.c  fb_allocator.h  main.c  sm_allocator.c  sm_allocator.h  x_allocator.c  x_allocator.h
.github/workflows/: cmake_clang.yml  cmake_ubuntu.yml  cmake_windows.yml
VS2017/: VS2017.sln
VS2017/VS2017/: VS2017.vcxproj  VS2017.vcxproj.filters
